--- a/modal.css
+++ b/modal.css
@@ -97,7 +97,7 @@ img {
   .topnav a.icon {
     float: right;
     display: block;
-    margin-top: -15px;
+    margin-top: 1px;
   }
 } 
 
@@ -326,7 +326,7 @@ input[data-error]::after {
 .btn-signup {
   background: #fe142f;
   display: block;
-  margin: 0 auto;
+  margin: 2rem auto;
   border-radius: 7px;
   font-size: 1rem;
   padding: 12px 82px;
