--- a/modal.css
+++ b/modal.css
@@ -106,10 +106,6 @@ main {
   font-size: 130%;
   font-weight: bolder;
   color: black;
-  padding-top: 0.5vw;
-  padding-left: 2vw;
-  padding-right: 2vw;
-  margin: 1px 20px 15px;
   border-radius: 2rem;
   text-align: justify;
 }
@@ -228,6 +224,7 @@ input:focus{
 .formData[data-error-visible="true"] .text-control {
   border: 2px solid #e54858;
 }
+
 /* 
 input[data-error]::after {
     content: attr(data-error);
@@ -327,7 +324,7 @@ input[data-error]::after {
 .btn-signup {
   background: #fe142f;
   display: block;
-  margin: 2rem auto;
+  margin:0 auto;
   border-radius: 7px;
   font-size: 1rem;
   padding: 12px 82px;
@@ -416,13 +413,12 @@ input[data-error]::after {
   margin-bottom: 10px;
 }
 .hero-content {
-  padding: 51px 67px;
   grid-column: span 4;
   background: #232323;
   color: #fff;
   position: relative;
   text-align: left;
-  min-width: 424px;
+  min-width: 324px;
 }
 .hero-content::after {
   content: "";
@@ -438,6 +434,7 @@ input[data-error]::after {
   z-index: 1;
 }
 .hero-headline {
+  margin: 4rem;
   font-size: 6rem;
   font-weight: normal;
   white-space: nowrap;
@@ -446,6 +443,7 @@ input[data-error]::after {
   width: 146%;
   font-weight: normal;
   margin-top: 57px;
+  margin-left: 4rem;
   padding: 0;
 }
 .btn-signup {
@@ -453,7 +451,7 @@ input[data-error]::after {
   text-transform: capitalize;
   font-size: 1.3rem;
   padding: 15px 23px;
-  margin: 0;
+  margin-left: 4rem;
   margin-top: 59px;
 }
 .hero-img {
@@ -480,11 +478,10 @@ footer {
   padding-right: 2vw;
   margin: 0 20px;
 }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 991px) {
   .content {
     width:90%;
   }
-
   .hero-section {
     display: block;
     box-shadow: unset;
@@ -492,21 +489,26 @@ footer {
   .hero-content {
     background: #fff;
     color: #000;
-    padding: 20px;
   }
   .hero-content::after {
     content: unset;
   }
+  .hero-content .btn-signup {
+    display: none;
+  }
   .hero-headline {
+    margin: 0;
+    margin-left: 4rem;
     font-size: 4.5rem;
     white-space: normal;
   }
   .hero-text {
-    width: unset;
+    width:70%;
     font-size: 1.5rem;
   }
   .hero-img img {
-    border-radius: 10px;
+    padding: 0 1rem;
+    border-radius: 35px;
     margin-top: 40px;
   }
   .hero-section > .btn-signup {
@@ -517,6 +519,16 @@ footer {
   .copyrights {
     margin-top: 50px;
     text-align: center;
+  }
+}
+
+@media screen and (max-width: 450px){
+
+  .hero-headline {
+    margin-top:1rem;
+    width: 70%;
+    font-size: 2rem;
+    white-space: normal;
   }
 }
 
