--- a/modal.css
+++ b/modal.css
@@ -69,10 +69,12 @@ img {
 }
 
 .topnav .icon {
+  font-size: 30px;
   display: none;
+  color: red;
 }
 
-@media screen and (max-width: 1150px) {
+@media screen and (max-width: 1250px) {
   .topnav a {display: none;}
   .topnav a.icon {
     float: right;
@@ -80,17 +82,24 @@ img {
   }
 }
 
-@media screen and (max-width: 1150px) {
+@media screen and (max-width: 1250px) {
   .topnav.responsive {position: relative;}
   .topnav.responsive .icon {
     position: absolute;
     right: 0;
     top: 0;
   }
+  .main-navbar{
+      margin-top: 75px;
+  }
   .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
+    margin-top: 20px;
+  }
+  .header-logo img{
+    margin-top: 20px;
   }
 }
 
@@ -103,6 +112,7 @@ img {
   }
   .header-logo img{
     width: 70%;
+    margin-top: 10px;
   }
 } 
 
