--- a/modal.css
+++ b/modal.css
@@ -79,12 +79,20 @@ img {
   .topnav a.icon {
     float: right;
     display: block;
+    padding: 10px;
   }
 }
 
 @media screen and (max-width: 1250px) {
-  .topnav.responsive {position: relative;}
+  .topnav.responsive {
+      position: relative;
+      display: flex;
+      align-content: center;
+      justify-content: center;
+      flex-direction: column;
+}
   .topnav.responsive .icon {
+    padding: 10px;
     position: absolute;
     right: 0;
     top: 0;
@@ -95,8 +103,7 @@ img {
   .topnav.responsive a {
     float: none;
     display: block;
-    text-align: left;
-    margin-top: 20px;
+    text-align: center;
   }
   .header-logo img{
     margin-top: 20px;
@@ -108,11 +115,14 @@ img {
   .topnav a.icon {
     float: right;
     display: block;
-    margin-top: 1px;
+    margin-top: 25px;
   }
-  .header-logo img{
+  .header-logo{
     width: 70%;
     margin-top: 10px;
+  }
+  .header-logo img{
+    width: 90%;
   }
 } 
 
@@ -122,7 +132,6 @@ main {
   color: black;
   border-radius: 2rem;
   text-align: justify;
-  padding: 0 2rem;
 }
 
 .modal-btn {
@@ -442,7 +451,7 @@ input[data-error]::after {
   grid-template-columns: repeat(12, 1fr);
   overflow: hidden;
   box-shadow: 0 2px 7px 2px rgba(0, 0, 0, 0.2);
-  margin-bottom: 10px;
+  margin: 10px;
 }
 .hero-content {
   grid-column: span 4;
@@ -474,7 +483,7 @@ input[data-error]::after {
 .hero-text {
   width: 146%;
   font-weight: normal;
-  margin-top: 57px;
+  margin-top: 30px;
   margin-left: 4rem;
   padding: 0;
 }
@@ -528,8 +537,8 @@ footer {
   .hero-headline {
     margin: 0;
     margin-left: 4rem;
-    font-size: 4.5rem;
-    white-space: normal;
+    font-size: 4rem;
+    white-space: break-spaces;
   }
   .hero-text {
     width:70%;
@@ -560,7 +569,7 @@ footer {
   .hero-headline {
     margin-top:1rem;
     width: 70%;
-    font-size: 2rem;
+    font-size: 3rem;
     white-space: normal;
   }
 }
